style.css
/* ... */
.extra-network-subdirs br{
    display: none;
}

.split-container[data-initsize="25"] {
    min-width: 135px !important;
}

.gradio-row:empty,
.hide-empty:has(.form.hidden),
.hide-empty:has(.gradio-html:first-child:empty) {
    display: none;
}

* .settings-comment {
    margin: 5px 0;
    font-size: 10px;
    color: rgba(255, 255, 255, 0.4);
}

* .settings-comment:has(a) {
    font-size: 0;
}

* .settings-comment a {
    font-size: 10px;
}

* a:not(:has(button)) {
    color: var(--sd-input-text-color);
    background-color: var(--sd-input-bg-color);
    border-radius: 3px;
    padding: 2px 10px;
    text-decoration: none;
}

* a:not(:has(button)):hover {
    color: var(--sd-input-hover-text-color);
    background-color: var(--sd-primary-color);
}

.spacer-v {
    max-height: var(--sd-input-border-size);
    min-height: var(--sd-input-border-size);
    background-color: var(--sd-input-border-color);
}

.spacer-group {
    max-height: var(--sd-input-border-size);
    min-height: var(--sd-input-border-size);
    background-color: var(--sd-primary-color);
    opacity: 50%;
}

* button[aria-label] {
    width: var(--sd-input-height);
    height: var(--sd-input-height);
}
* button[aria-label="Edit"] {
display:none;
}


* .center.boundedheight {
    background-color: var(--sd-input-bg-color);
}

.sd-button {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: var(--sd-gap-size);
    border-radius: var(--sd-border-radius);
    border: var(--sd-input-border-size) solid var(--sd-input-border-color);
    background-color: var(--sd-input-bg-color);
   /*  padding: var(--sd-panel-padding); */
    cursor: pointer;
}


/* .sd-button .mask-icon:hover,
.sd-button.active .mask-icon:hover {
    background-color: var(--sd-input-hover-text-color);
} */

.sd-button.active {
    color: var(--sd-input-hover-text-color);
    background-color: var(--sd-primary-color);
}

.sd-button:hover,
.sd-button.active:hover {
    color: var(--sd-input-hover-text-color);
    background-color: var(--sd-primary-color);
}

button:hover .icon-letters,
button.active .icon-letters {
    color: var(--sd-input-hover-text-color);
}

button.active svg,
button:hover svg {
    fill: var(--sd-input-hover-text-color);
}

/* .sd-button:hover .mask-icon {
    background-color: var(--sd-input-hover-text-color);
}

.sd-button:hover span{
    color: var(--sd-input-hover-text-color);
} */

.portal:has(.gradio-accordion) {
    padding: 0;
}

.icons-bar .portal {
    border: 0;
    outline: 0;
    background: transparent;
}

.icons-bar .portal button {
    padding: 0;
    border: 0;
    outline: 0;
    background: transparent;
}

.sd-button .gradio-button {
    border: 0;
    padding: 0;
    min-width: unset;
    min-height: unset;
    align-items: center;
    display: flex;
}

.sd-button .gradio-button span {
    padding: 5px;
    font-size: var(--sd-input-font-size);
}

.padding {
    padding: var(--sd-panel-padding);
}

.sd-button .portal {
    padding: 0;
    outline: 0;
    background: transparent;
}

.sd-button .portal button {
    background-color: transparent !important;
}

.center {
    justify-content: center !important;
}

#portal-16>div>div:first-child {
    display: none;
}

.toggle-seed {
    padding: var(--sd-panel-padding) !important;
    min-width: var(--sd-input-height);
    height: var(--sd-input-height);
}
.gradio-group:has(> .styler:empty),
.portal:has(> .hide),
.gradio-column:has(> .form:empty),
.gradio-row:has(> .form:empty) {
    display: none;
}

.sd-button .gradio-button span {
    padding: 5px;
    font-size: var(--sd-input-font-size);
}




*.disable {
    opacity: 0.5;
    pointer-events: none;
}
*.disable > button {
    display: flex !important;
}

.generate {
    overflow: hidden;
}

.generate.active>.portal::before {
    content: "";
    position: absolute;
    height: 200px;
    width: 200px;
    background-image: linear-gradient(90deg,
            rgba(0, 0, 0, 0.1) 0%,
            rgba(0, 0, 0, 0.1) 50%,
            rgba(255, 255, 255, 0) 51%,
            rgba(255, 255, 255, 0) 100%);
    background-repeat: repeat;
    background-size: 20px;
    transform: rotate(30deg);
    z-index: 1;
    -webkit-animation-name: bg-slide;
    -webkit-animation-duration: 3s;
    -webkit-animation-iteration-count: infinite;
    -webkit-animation-timing-function: linear;
}

.generate.active>.portal>button {
    position: relative;
    -webkit-filter: drop-shadow(0px 0px 1px var(--sd-primary-color)) drop-shadow(0px 0px 1px var(--sd-primary-color)) drop-shadow(0px 0px 1px var(--sd-primary-color)) drop-shadow(0px 0px 1px var(--sd-primary-color));
    z-index: 1;
}
/* .generate.active > span{
    display:none !important;
} */

* #extensions_installed_top {
    display: flex !important;
}

*.notransition {
    transition: none !important;
    animation: none !important;
   /* animation-duration: 0.0s !important;  */
    /* animation-fill-mode: none !important; */
}



*.fade-in,
*.fade-out {
    position: absolute;
    inset: 0;
    justify-content: flex-start !important;
    overflow: auto;
    z-index: 999;
}

*.fade-in {
    display: flex !important;
    animation: fade-in 0.25s;
    animation-fill-mode: forwards;
}

*.notransition.fade-in {
    display: flex !important;
   /*  position: initial !important; */
}
*.notransition.fade-out {
    display: none !important;
    position: initial !important;
}

/* *.fade-in > div:not(.layout-content) {
    flex-grow:0;
} */

*.fade-out {
    animation: fade-out 0.25s;
    animation-fill-mode: forwards;
}

*.template {
    position: absolute;
    inset: 0;
}

.initial {
    position: initial;
}

.app {
    min-height: 100vh;
    width: 100%;
    gap:0;
}
.app_footer {
    flex-grow: 0;
    margin: 0;
    align-items: center;
    gap: 0;
}
.app_footer br {
    display:none;
}

.grow {
    flex-grow: 1;
}
.flex-start {
    justify-content: flex-start;
}

/* #main-nav .xtabs-tab {
    justify-content: flex-start;
} */
/* ... */

